--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,177 @@
+@font-face {
+    font-family: Norse-Bold;
+    src: url(./fonts/Norse-Bold.otf);
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+    background-color: #cccccc;
+}
+
+.container {
+    width: 1000px;
+    height: 800px;
+    margin: 25px auto;
+    background-color: #f9fafb;
+    display: flex;
+}
+
+.left-container {
+    width: 40%;
+    position: relative;
+}
+
+.left-container img {
+    width: 100%;
+    height: 100%;
+}
+
+.card-container {
+    position: absolute;
+    width: 100%;
+    height: 15%;
+    top: 11rem;
+    background: rgba(0, 0, 0, 0.4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.card-container .card-image {
+    width: 75px;
+    height: 100px;
+}
+
+.card-title {
+    color: #ffffff;
+    font-size: 75px;
+    font-family: Norse-Bold, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.credits,
+a {
+    color: #ffffff;
+    text-align: center;
+}
+
+.credits {
+    position: absolute;
+    bottom: 10px;
+    left: 120px;
+    font-size: 10px;
+
+}
+
+.right-container {
+    display: flex;
+    flex-direction: column;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.form {
+    background-color: #ffffff;
+    width: 600px;
+    height: 30%;
+}
+
+.header,
+.footer {
+    width: 600px;
+    height: 35%;
+}
+
+.header,
+.form,
+.footer {
+    padding-left: 30px;
+}
+
+.header {
+    font-size: large;
+    font-weight: bold;
+    padding-top: 120px;
+    padding-right: 80px;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+.header-text-2 {
+    padding-top: 20px;
+}
+
+.form {
+    box-shadow: 0px 5px 5px -2px #cccccc;
+    font-size: 10px;
+}
+
+.form-header {
+    margin: 15px 0px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+label {
+    display: block;
+}
+
+.first-row,
+.second-row,
+.third-row {
+    display: flex;
+    gap: 60px;
+}
+
+input {
+    border: 2px solid #f1f1f1;
+    margin-bottom: 15px;
+    padding: 5px;
+    border-radius: 2px;
+    background-color: #f9fafb;
+    width: 200px;
+    height: 25px;
+}
+
+input:focus {
+    border: 2px solid #0070ff;
+    outline: none;
+    box-shadow: 0px 5px 5px -2px #cccccc;
+}
+
+input:invalid {
+    border-color: #cc0006;
+    opacity: 0.5;
+}
+
+.footer {
+    padding-top: 30px;
+}
+
+.footer-button {
+    border: none;
+    background-color: #596D48;
+    border-radius: 6px;
+    padding: 12px 40px;
+    font-size: 14px;
+    font-weight: bold;
+    color: #ffffff;
+}
+
+.footer-button:hover {
+    background-color: #47573a;
+    cursor: pointer;
+}
+
+.footer-text {
+    margin-top: 30px;
+}
+
+.footer-text a {
+    color: #596D48;
+    font-weight: bold;
+    text-decoration: none;
 }
